-- =============================================================================
-- V2: Full schema baseline
--
-- Creates the complete schema from the entity model. Generated from Hibernate's
-- own DDL (PostgreSQLDialect + the app's naming strategy) so it matches exactly
-- what `ddl-auto: validate` expects.
--
-- Idempotent and safe on databases that already have the schema:
--   - CREATE TABLE / INDEX use IF NOT EXISTS
--   - each FK is wrapped in a DO block that swallows duplicate_object
--
-- Purpose: with ddl-auto switched from `update` to `validate`, Hibernate no
-- longer builds the schema. This migration creates it for fresh/empty databases
-- (new dev machines, CI, fresh Docker volumes); on existing databases every
-- statement is a no-op. Runs after V1 (the old->new product-domain refactor),
-- which is itself a no-op on fresh databases.
-- =============================================================================

create table if not exists brand_analytics (conversion_rate float(53), revenue numeric(38,2), brand_id bigint not null unique, id bigint generated by default as identity, total_sales bigint, total_views bigint, primary key (id));
create table if not exists brand_economics (default_commission_rate numeric(38,2), lifetime_revenue numeric(38,2), outstanding_debt numeric(38,2), paid_out_total numeric(38,2), payout_balance numeric(38,2), pending_balance numeric(38,2), brand_id bigint not null unique, id bigint generated by default as identity, version bigint, primary key (id));
create table if not exists brand_partners (approved boolean not null, created_at timestamp(6), id bigint generated by default as identity, updated_at timestamp(6), user_id bigint not null unique, brand_name varchar(255) not null unique, contact_email varchar(255), country varchar(255), description TEXT, instagram_handle varchar(255), logo_url varchar(255), slug varchar(255) not null unique, status varchar(255) not null check ((status in ('PENDING_REVIEW','ACTIVE','SUSPENDED','REJECTED'))), tiktok_handle varchar(255), website_url varchar(255), primary key (id));
create table if not exists brand_payout_profiles (brand_id bigint not null unique, created_at timestamp(6) not null, id bigint generated by default as identity, updated_at timestamp(6) not null, iban varchar(34) not null, bank_account_holder varchar(255) not null, primary key (id));
create table if not exists brand_shipping_profiles (avg_shipping_days integer, handles_own_shipping boolean not null, shipping_cost numeric(10,2), brand_id bigint not null unique, id bigint generated by default as identity, origin_country varchar(255), primary key (id));
create table if not exists customer_favorite_brands (customer_id bigint not null, brand varchar(255));
create table if not exists customer_favorite_categories (customer_id bigint not null, category varchar(255));
create table if not exists customer_preferred_styles (customer_id bigint not null, style varchar(255));
create table if not exists customers (height_cm integer, total_orders integer not null, total_spent numeric(19,2) not null, weight_kg integer, created_at timestamp(6), id bigint generated by default as identity, user_id bigint not null unique, city varchar(255), country varchar(255), first_name varchar(255), last_name varchar(255), preferred_size_bottom varchar(255), preferred_size_shoes varchar(255), preferred_size_top varchar(255), profile_image_url varchar(255), username varchar(255), primary key (id));
create table if not exists ledger_entries (brand_payout numeric(10,2) not null, commission_rate numeric(5,4) not null, currency varchar(3) not null, moved_to_available boolean not null, platform_fee numeric(10,2) not null, total_amount numeric(10,2) not null, brand_partner_id bigint not null, created_at timestamp(6) not null, id bigint generated by default as identity, order_id bigint, order_item_id bigint, payout_eligible_at timestamp(6) not null, reversal_of_entry_id bigint, entry_type varchar(255) not null check ((entry_type in ('ORDER_PAYMENT','PAYOUT_TRANSFER','REFUND_REVERSAL'))), external_reference_id varchar(255), status varchar(255) not null check ((status in ('PENDING_RELEASE','AVAILABLE','PAID_OUT','REVERSED'))), primary key (id));
create table if not exists listings (active boolean not null, currency varchar(3) not null, discount_price numeric(10,2), price numeric(10,2) not null, available_from timestamp(6), available_until timestamp(6), created_at timestamp(6), drop_date timestamp(6), id bigint generated by default as identity, product_id bigint not null, updated_at timestamp(6), variant_id bigint not null, region varchar(255), primary key (id));
create table if not exists order_items (brand_payout_amount numeric(10,2), commission_rate numeric(5,4), discount_price_at_purchase numeric(10,2), line_total numeric(10,2) not null, platform_fee_amount numeric(10,2), price_at_purchase numeric(10,2) not null, quantity integer not null, id bigint generated by default as identity, order_id bigint not null, variant_id bigint not null, brand_snapshot_name varchar(255), product_snapshot_name varchar(255) not null, variant_snapshot_color varchar(255) not null, variant_snapshot_size varchar(255) not null, variant_snapshot_sku varchar(255) not null, primary key (id));
create table if not exists orders (currency varchar(3) not null, shipping_total numeric(10,2) not null, subtotal numeric(10,2) not null, total numeric(10,2) not null, buyer_id bigint not null, created_at timestamp(6) not null, id bigint generated by default as identity, problem_reported_at timestamp(6), shipped_at timestamp(6), updated_at timestamp(6) not null, version bigint, cancellation_note varchar(500), problem_description varchar(1000), cancellation_reason varchar(255) check ((cancellation_reason in ('FRAUD_SUSPICION','OUT_OF_STOCK','CUSTOMER_REQUEST','TECHNICAL_ERROR','OTHER'))), cancelled_by_admin_email varchar(255), city varchar(255), country varchar(255), full_name varchar(255), notes TEXT, order_number varchar(255) not null unique, phone varchar(255), postal_code varchar(255), problem_reported_by varchar(255), shipping_carrier varchar(255), state varchar(255), status varchar(255) not null check ((status in ('PENDING','PAID','SHIPPED','DELIVERED','SHIPPING_PROBLEM','AWAITING_ADMIN','MANUAL_REVIEW','RETURN_REQUESTED','RETURN_APPROVED','RETURN_RECEIVED','REFUNDED','CANCELLED'))), street varchar(255), street2 varchar(255), tracking_number varchar(255), primary key (id));
create table if not exists payments (amount numeric(10,2) not null, currency varchar(3) not null, created_at timestamp(6), id bigint generated by default as identity, order_id bigint not null unique, paid_at timestamp(6), updated_at timestamp(6), version bigint, payment_method varchar(255), status varchar(255) not null check ((status in ('PENDING','PAID','FAILED','REFUNDED'))), transaction_id varchar(255), primary key (id));
create table if not exists payouts (amount numeric(10,2) not null, currency varchar(3) not null, debt_absorbed numeric(10,2) not null, approved_at timestamp(6), brand_partner_id bigint not null, created_at timestamp(6) not null, id bigint generated by default as identity, paid_at timestamp(6), iban varchar(34) not null, approved_by_admin_email varchar(255), bank_account_holder varchar(255) not null, external_reference varchar(255), paid_by_admin_email varchar(255), status varchar(255) not null check ((status in ('PENDING','APPROVED','PAID','CANCELLED'))), primary key (id));
create table if not exists product_analytics (add_to_cart bigint not null, clicks bigint not null, created_at timestamp(6), id bigint generated by default as identity, product_id bigint not null unique, units_sold bigint not null, updated_at timestamp(6), views bigint not null, primary key (id));
create table if not exists product_catalogue_categories (product_id bigint not null, category varchar(255) check ((category in ('STREETWEAR','CULTURAL','EXPERIMENTAL','ATHLEISURE','STAR'))));
create table if not exists product_colors (id bigint generated by default as identity, product_id bigint not null, sku varchar(8) not null unique, color varchar(255) not null, primary key (id), constraint uq_product_colors_product_color unique (product_id, color));
create table if not exists product_complete_the_look (product_id bigint not null, related_product_id bigint not null, primary key (product_id, related_product_id));
create table if not exists product_economics (commission_rate numeric(5,2), logistics_cost numeric(10,2), production_cost numeric(10,2), target_margin numeric(5,2), created_at timestamp(6), id bigint generated by default as identity, product_id bigint not null unique, updated_at timestamp(6), primary key (id));
create table if not exists product_images (display_order integer not null, is_primary boolean, created_at timestamp(6), id bigint generated by default as identity, product_id bigint not null, alt_text varchar(255), image_url varchar(255) not null, primary key (id));
create table if not exists product_variants (stock_quantity integer not null, weight_grams integer, id bigint generated by default as identity, product_color_id bigint not null, product_id bigint not null, size varchar(255), primary key (id), constraint uq_product_variants_color_size unique (product_color_id, size));
create table if not exists product_videos (created_at timestamp(6), id bigint generated by default as identity, product_id bigint not null, thumbnail_url varchar(255), title varchar(255), video_url varchar(255) not null, primary key (id));
create table if not exists products (complete_the_look_enabled boolean not null, release_date date, return_period_days integer not null, brand_id bigint not null, created_at timestamp(6), creator_id bigint not null, id bigint generated by default as identity, moderated_at timestamp(6), moderated_by bigint, updated_at timestamp(6), care_instructions TEXT, category varchar(255) not null check ((category in ('CLOTHING','SHOES','ACCESSORIES','PERFUME'))), collection_name varchar(255), description TEXT, gender varchar(255) not null check ((gender in ('UNISEX','MEN','WOMEN','OTHER'))), inspiration_story TEXT, material varchar(255), name varchar(255) not null, origin_country varchar(255), outfit_slot varchar(255) not null check ((outfit_slot in ('TOP','BOTTOM','OUTERWEAR','FOOTWEAR','ACCESSORY'))), product_type varchar(255) not null check ((product_type in ('T_SHIRT','LONGSLEEVE','HOODIE','ZIP_HOODIE','SWEATER','JEANS','CARGO_PANTS','JOGGER','SHORTS','PANTS','JACKET','SNEAKERS','BOOTS','CAP','BEANIE','BAG','BELT','JEWELRY'))), rejection_reason TEXT, status varchar(255) not null check ((status in ('ACTIVE','SUSPENDED','REJECTED','INACTIVE','ARCHIVED'))), primary key (id));
create table if not exists return_items (quantity_returned integer not null, id bigint generated by default as identity, order_item_id bigint not null, return_order_id bigint not null, primary key (id));
create table if not exists returns (refund_amount numeric(10,2), approved_at timestamp(6), id bigint generated by default as identity, order_id bigint not null, received_at timestamp(6), refunded_at timestamp(6), requested_at timestamp(6), user_id bigint not null, description varchar(500), reason varchar(255) check ((reason in ('WRONG_SIZE','WRONG_COLOR','DAMAGED','DEFECTIVE','NOT_AS_DESCRIBED','NO_LONGER_WANTED','OTHER'))), return_label varchar(255), return_number varchar(255) not null unique, status varchar(255) not null check ((status in ('REQUESTED','APPROVED','RECEIVED','REFUNDED'))), primary key (id));
create table if not exists users (admin_approved boolean, enabled boolean not null, created_at timestamp(6), id bigint generated by default as identity, verification_code_expires_at timestamp(6), email varchar(255) not null unique, password varchar(255) not null, role varchar(255) not null check ((role in ('CUSTOMER','BRAND_PARTNER','ADMIN'))), verification_code varchar(255), primary key (id));
create table if not exists wardrobe_items (is_public boolean not null, created_at timestamp(6), id bigint generated by default as identity, user_id bigint not null, brand varchar(255), category varchar(255), color varchar(255), image_url varchar(255), style_tag varchar(255), primary key (id));

create index if not exists idx_ledger_order_id on ledger_entries (order_id);
create index if not exists idx_ledger_brand_id on ledger_entries (brand_partner_id);
create index if not exists idx_ledger_eligible_at on ledger_entries (payout_eligible_at);
create index if not exists idx_ledger_status on ledger_entries (status);
create index if not exists idx_ledger_external_ref on ledger_entries (external_reference_id);
create index if not exists idx_payout_brand on payouts (brand_partner_id);
create index if not exists idx_payout_status on payouts (status);

DO $$ BEGIN ALTER TABLE brand_analytics ADD CONSTRAINT FKaondj7fxd1m99wfe6729tbi9p FOREIGN KEY (brand_id) REFERENCES brand_partners; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE brand_economics ADD CONSTRAINT FKsby6848xb3qgy5ikpd5pbd2e4 FOREIGN KEY (brand_id) REFERENCES brand_partners; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE brand_partners ADD CONSTRAINT FKe7ncjj2i7ecqp588bcfojjdm9 FOREIGN KEY (user_id) REFERENCES users; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE brand_payout_profiles ADD CONSTRAINT FKceg4u9ogju9ndiuxmafley97j FOREIGN KEY (brand_id) REFERENCES brand_partners; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE brand_shipping_profiles ADD CONSTRAINT FKl8d1vb5crj9rbiqtdt9svobfr FOREIGN KEY (brand_id) REFERENCES brand_partners; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE customer_favorite_brands ADD CONSTRAINT FKjjjcguovl3m0658alu3gf4mug FOREIGN KEY (customer_id) REFERENCES customers; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE customer_favorite_categories ADD CONSTRAINT FK98f1i47oq0pax10cvoup26vtj FOREIGN KEY (customer_id) REFERENCES customers; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE customer_preferred_styles ADD CONSTRAINT FKd22g3cs0yi9uw1feoc6fg72u5 FOREIGN KEY (customer_id) REFERENCES customers; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE customers ADD CONSTRAINT FKrh1g1a20omjmn6kurd35o3eit FOREIGN KEY (user_id) REFERENCES users; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE listings ADD CONSTRAINT FK54fwuj7dl80j6lt7g0y799x6y FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE listings ADD CONSTRAINT FK51hip5occsl75tq09exwh46pi FOREIGN KEY (variant_id) REFERENCES product_variants; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE order_items ADD CONSTRAINT FKbioxgbv59vetrxe0ejfubep1w FOREIGN KEY (order_id) REFERENCES orders; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE order_items ADD CONSTRAINT FKemq71edpbn9wsxnxncfn1algp FOREIGN KEY (variant_id) REFERENCES product_variants; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE orders ADD CONSTRAINT FKhtx3insd5ge6w486omk4fnk54 FOREIGN KEY (buyer_id) REFERENCES users; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE payments ADD CONSTRAINT FK81gagumt0r8y3rmudcgpbk42l FOREIGN KEY (order_id) REFERENCES orders; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_analytics ADD CONSTRAINT FKs01u7vesjtjndswsh8fl6aytg FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_catalogue_categories ADD CONSTRAINT FKfi7yk54m5gn7e5am7gnmm9xal FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_colors ADD CONSTRAINT FKqhu7cqni31911lmvx4fqmiw65 FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_complete_the_look ADD CONSTRAINT FK95dxhj5ksnej3fgwtqr2w090b FOREIGN KEY (related_product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_complete_the_look ADD CONSTRAINT FK6671k9s90m2iep3wsirfdivgn FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_economics ADD CONSTRAINT FKssd20t612iks3324671ona202 FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_images ADD CONSTRAINT FKqnq71xsohugpqwf3c9gxmsuy FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_variants ADD CONSTRAINT FKosqitn4s405cynmhb87lkvuau FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_variants ADD CONSTRAINT FK7ximnwgs0ohjir933qf6t6qme FOREIGN KEY (product_color_id) REFERENCES product_colors; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE product_videos ADD CONSTRAINT FK5ky63cnksbk4csgasc3asnt7f FOREIGN KEY (product_id) REFERENCES products; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE products ADD CONSTRAINT FKmmvw8l5d3362p8cdmvatxrk9n FOREIGN KEY (brand_id) REFERENCES brand_partners; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE products ADD CONSTRAINT FKid1quonr11ajt1rq1xbvx9p47 FOREIGN KEY (creator_id) REFERENCES users; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE products ADD CONSTRAINT FKopmyesnl07ghhoamr047d1stu FOREIGN KEY (moderated_by) REFERENCES users; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE return_items ADD CONSTRAINT FK2nfjf1atvp0qkpjvd517m6cq7 FOREIGN KEY (order_item_id) REFERENCES order_items; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE return_items ADD CONSTRAINT FKtqevmgaxp6ejftmqfbhb0vvxg FOREIGN KEY (return_order_id) REFERENCES returns; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE returns ADD CONSTRAINT FKtge2tys80xohjn8v3wtiy21yi FOREIGN KEY (order_id) REFERENCES orders; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE returns ADD CONSTRAINT FKof2cd2g96d3xgt0lnqbrydgvx FOREIGN KEY (user_id) REFERENCES users; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN ALTER TABLE wardrobe_items ADD CONSTRAINT FKc18ef3k5s35n4s9wxrclsp20q FOREIGN KEY (user_id) REFERENCES users; EXCEPTION WHEN duplicate_object THEN NULL; END $$;
